2005-11-15    <Fernando.Perez@colorado.edu>

	* IPython/ipmaker.py (make_IPython): cleanups which should improve
	startup time.

	* IPython/iplib.py (runcode): my globals 'fix' for embedded
	instances had introduced a bug with globals in normal code.  Now
	it's working in all cases.

	* IPython/Magic.py (magic_psearch): Finish wildcard cleanup and
	API changes.  A new ipytonrc option, 'wildcards_case_sensitive'
	has been introduced to set the default case sensitivity of the
	searches.  Users can still select either mode at runtime on a
	per-search basis.

2005-11-13    <Fernando.Perez@colorado.edu>

	* IPython/wildcard.py (NameSpace.__init__): fix resolution of
	attributes in wildcard searches for subclasses.  Modified version
	of a patch by Jorgen.

2005-11-12    <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (embed_mainloop): Fix handling of globals for
	embedded instances.  I added a user_global_ns attribute to the
	InteractiveShell class to handle this.

2005-10-31  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (IPShellGTK.mainloop): Change timeout_add to
	idle_add, which fixes horrible keyboard lag problems under gtk 2.6
	(reported under win32, but may happen also in other platforms).
	Bug report and fix courtesy of Sean Moore <smm-AT-logic.bm>

2005-10-15  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_psearch): new support for wildcard
	patterns.  Now, typing ?a*b will list all names which begin with a
	and end in b, for example.  The %psearch magic has full
	docstrings.  Many thanks to Jörgen Stenarson
	<jorgen.stenarson-AT-bostream.nu>, author of the patches
	implementing this functionality.

2005-09-27  Fernando Perez  <Fernando.Perez@colorado.edu>

	* Manual: fixed long-standing annoyance of double-dashes (as in
	--prefix=~, for example) being stripped in the HTML version.  This
	is a latex2html bug, but a workaround was provided.  Many thanks